# rust-oneshotserver

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/lib/: libosw_lib.rlib
app/src/: main.rs
src/: lib.rs
