[package]
name = "oneshotserver"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "A quick utility to create a simple web server which blocks the current thread until the first request is served. Usecases include handling incoming requests for usecases like OAuth token generation etc."
readme = "README.md"
repository = "https://github.com/Surya-06/rust-oneshotserver"
homepage = "https://github.com/Surya-06/rust-oneshotserver"
keywords = ["http-server", "one-shot-server", "synchronous-web-server"]
categories = ["web-programming::http-server"]



[dependencies]
debug_print = "1.0.0"
hyper = { version = "0.14.23", features=["http1", "tcp", "server"]}
lazy_static = "1.4.0"
tokio = { version = "1.24.1", features=["full"]}
